antlr-generated/edu/calpoly/mwerner/compiler/MiniParser.java
// $ANTLR 3.5.2 C:\\eclipse-workspaces\\workspace1\\Compiler\\src\\edu\\calpoly\\mwerner\\compiler\\Mini.g 2014-05-23 15:59:23

   package edu.calpoly.mwerner.compiler;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class MiniParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "ARGS", "ASSIGN", "BLOCK", 
		"BOOL", "COMMA", "COMMENT", "DECL", "DECLLIST", "DECLS", "DELETE", "DIVIDE", 
		"DOT", "ELSE", "ENDL", "EQ", "FALSE", "FUN", "FUNCS", "GE", "GT", "ID", 
		"IF", "INT", "INTEGER", "INVOKE", "LBRACE", "LE", "LPAREN", "LT", "MINUS", 
		"NE", "NEG", "NEW", "NOT", "NULL", "OR", "PARAMS", "PLUS", "PRINT", "PROGRAM", 
		"RBRACE", "READ", "RETTYPE", "RETURN", "RPAREN", "SEMI", "STMTS", "STRUCT", 
		"TIMES", "TRUE", "TYPE", "TYPES", "VOID", "WHILE", "WS"
	};
	public static final int EOF=-1;
	public static final int AND=4;
	public static final int ARGS=5;
	public static final int ASSIGN=6;
	public static final int BLOCK=7;
	public static final int BOOL=8;
	public static final int COMMA=9;
	public static final int COMMENT=10;
	public static final int DECL=11;
	public static final int DECLLIST=12;
	public static final int DECLS=13;
	public static final int DELETE=14;
	public static final int DIVIDE=15;
	public static final int DOT=16;
	public static final int ELSE=17;
	public static final int ENDL=18;
	public static final int EQ=19;
	public static final int FALSE=20;
	public static final int FUN=21;
	public static final int FUNCS=22;
	public static final int GE=23;
	public static final int GT=24;
	public static final int ID=25;
	public static final int IF=26;
	public static final int INT=27;
	public static final int INTEGER=28;
	public static final int INVOKE=29;
	public static final int LBRACE=30;
	public static final int LE=31;
	public static final int LPAREN=32;
	public static final int LT=33;
	public static final int MINUS=34;
	public static final int NE=35;
	public static final int NEG=36;
	public static final int NEW=37;
	public static final int NOT=38;
	public static final int NULL=39;
	public static final int OR=40;
	public static final int PARAMS=41;
	public static final int PLUS=42;
	public static final int PRINT=43;
	public static final int PROGRAM=44;
	public static final int RBRACE=45;
	public static final int READ=46;
	public static final int RETTYPE=47;
	public static final int RETURN=48;
	public static final int RPAREN=49;
	public static final int SEMI=50;
	public static final int STMTS=51;
	public static final int STRUCT=52;
	public static final int TIMES=53;
	public static final int TRUE=54;
	public static final int TYPE=55;
	public static final int TYPES=56;
	public static final int VOID=57;
	public static final int WHILE=58;
	public static final int WS=59;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public MiniParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public MiniParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return MiniParser.tokenNames; }
	@Override public String getGrammarFileName() { return "C:\\eclipse-workspaces\\workspace1\\Compiler\\src\\edu\\calpoly\\mwerner\\compiler\\Mini.g"; }


	   private boolean _errors = false;
	   public boolean hasErrors()
	   {
	      return _errors;
	   }


	public static class program_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "program"
	// C:\\eclipse-workspaces\\workspace1\\Compiler\\src\\edu\\calpoly\\mwerner\\compiler\\Mini.g:119:1: program : t= types d= declarations f= functions EOF -> ^( PROGRAM $t $d $f) ;
	public final MiniParser.program_return program() throws RecognitionException {
		MiniParser.program_return retval = new MiniParser.program_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token EOF1=null;
		ParserRuleReturnScope t =null;
		ParserRuleReturnScope d =null;
		ParserRuleReturnScope f =null;

		Object EOF1_tree=null;
		RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
		RewriteRuleSubtreeStream stream_functions=new RewriteRuleSubtreeStream(adaptor,"rule functions");
		RewriteRuleSubtreeStream stream_types=new RewriteRuleSubtreeStream(adaptor,"rule types");
		RewriteRuleSubtreeStream stream_declarations=new RewriteRuleSubtreeStream(adaptor,"rule declarations");

		try {
			// C:\\eclipse-workspaces\\workspace1\\Compiler\\src\\edu\\calpoly\\mwerner\\compiler\\Mini.g:120:4: (t= types d= declarations f= functions EOF -> ^( PROGRAM $t $d $f) )
			// C:\\eclipse-workspaces\\workspace1\\Compiler\\src\\edu\\calpoly\\mwerner\\compiler\\Mini.g:120:7: t= types d= declarations f= functions EOF
			{
			pushFollow(FOLLOW_types_in_program1055);
			t=types();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) stream_types.add(t.getTree());
			pushFollow(FOLLOW_declarations_in_program1059);
			d=declarations();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) stream_declarations.add(d.getTree());
			pushFollow(FOLLOW_functions_in_program1063);
			f=functions();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) stream_functions.add(f.getTree());
			EOF1=(Token)match(input,EOF,FOLLOW_EOF_in_program1065); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_EOF.add(EOF1);

			// AST REWRITE
			// elements: d, t, f
			// token labels: 
			// rule labels: f, retval, d, t
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if ( state.backtracking==0 ) {
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_f=new RewriteRuleSubtreeStream(adaptor,"rule f",f!=null?f.getTree():null);
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);
			RewriteRuleSubtreeStream stream_d=new RewriteRuleSubtreeStream(adaptor,"rule d",d!=null?d.getTree():null);
			RewriteRuleSubtreeStream stream_t=new RewriteRuleSubtreeStream(adaptor,"rule t",t!=null?t.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 121:7: -> ^( PROGRAM $t $d $f)
			{
				// C:\\eclipse-workspaces\\workspace1\\Compiler\\src\\edu\\calpoly\\mwerner\\compiler\\Mini.g:121:10: ^( PROGRAM $t $d $f)
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(PROGRAM, "PROGRAM"), root_1);
				adaptor.addChild(root_1, stream_t.nextTree());
				adaptor.addChild(root_1, stream_d.nextTree());
				adaptor.addChild(root_1, stream_f.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}

		   catch (RecognitionException re)
		   {
		      reportError(re);
		      recover(input, re);
		      _errors = true;
		   }

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "program"


	public static class types_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "types"
	// C:\\eclipse-workspaces\\workspace1\\Compiler\\src\\edu\\calpoly\\mwerner\\compiler\\Mini.g:123:1: types : ( ( STRUCT ID LBRACE )=> types_sub -> ^( TYPES types_sub ) | -> TYPES );
	public final MiniParser.types_return types() throws RecognitionException {
		MiniParser.types_return retval = new MiniParser.types_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope types_sub2 =null;

		RewriteRuleSubtreeStream stream_types_sub=new RewriteRuleSubtreeStream(adaptor,"rule types_sub");

		try {
			// C:\\eclipse-workspaces\\workspace1\\Compiler\\src\\edu\\calpoly\\mwerner\\compiler\\Mini.g:124:4: ( ( STRUCT ID LBRACE )=> types_sub -> ^( TYPES types_sub ) | -> TYPES )
			int alt1=2;
			switch ( input.LA(1) ) {
			case STRUCT:
				{
				int LA1_1 = input.LA(2);
				if ( (synpred1_Mini()) ) {
					alt1=1;
				}
				else if ( (true) ) {
					alt1=2;
				}

				}
				break;
			case INT:
				{
				int LA1_2 = input.LA(2);
				if ( (synpred1_Mini()) ) {
					alt1=1;
				}
				else if ( (true) ) {
					alt1=2;
				}

				}
				break;
			case BOOL:
				{
				int LA1_3 = input.LA(2);
				if ( (synpred1_Mini()) ) {
					alt1=1;
				}
				else if ( (true) ) {
					alt1=2;
				}

				}
				break;
			case FUN:
				{
				int LA1_4 = input.LA(2);
				if ( (synpred1_Mini()) ) {
					alt1=1;
				}
				else if ( (true) ) {
					alt1=2;
				}

				}
				break;
			case EOF:
				{
				int LA1_5 = input.LA(2);
				if ( (synpred1_Mini()) ) {
					alt1=1;
				}
				else if ( (true) ) {
					alt1=2;
				}

				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 1, 0, input);
				throw nvae;
			}
			switch (alt1) {
				case 1 :
					// C:\\eclipse-workspaces\\workspace1\\Compiler\\src\\edu\\calpoly\\mwerner\\compiler\\Mini.g:124:7: ( STRUCT ID LBRACE )=> types_sub
					{
					pushFollow(FOLLOW_types_sub_in_types1111);
					types_sub2=types_sub();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_types_sub.add(types_sub2.getTree());
					// AST REWRITE
					// elements: types_sub
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					if ( state.backtracking==0 ) {
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 124:39: -> ^( TYPES types_sub )
					{
						// C:\\eclipse-workspaces\\workspace1\\Compiler\\src\\edu\\calpoly\\mwerner\\compiler\\Mini.g:124:42: ^( TYPES types_sub )
						{
						Object root_1 = (Object)adaptor.nil();
						root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(TYPES, "TYPES"), root_1);
						adaptor.addChild(root_1, stream_types_sub.nextTree());
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;
					}

					}
					break;
				case 2 :
					// C:\\eclipse-workspaces\\workspace1\\Compiler\\src\\edu\\calpoly\\mwerner\\compiler\\Mini.g:125:7: 
					{
					// AST REWRITE
					// elements: 
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					if ( state.backtracking==0 ) {
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 125:7: -> TYPES
					{
						adaptor.addChild(root_0, (Object)adaptor.create(TYPES, "TYPES"));
					}


					retval.tree = root_0;
					}

					}
					break;

			}
			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}

		   catch (RecognitionException re)
		   {
		      reportError(re);
		      recover(input, re);
		      _errors = true;
		   }

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "types"


	public static class types_sub_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "types_sub"
	// C:\\eclipse-workspaces\\workspace1\\Compiler\\src\\edu\\calpoly\\mwerner\\compiler\\Mini.g:127:1: types_sub : ( ( STRUCT ID LBRACE )=> type_declaration types_sub |);
	public final MiniParser.types_sub_return types_sub() throws RecognitionException {
		MiniParser.types_sub_return retval = new MiniParser.types_sub_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope type_declaration3 =null;
		ParserRuleReturnScope types_sub4 =null;


		try {
			// C:\\eclipse-workspaces\\workspace1\\Compiler\\src\\edu\\calpoly\\mwerner\\compiler\\Mini.g:128:4: ( ( STRUCT ID LBRACE )=> type_declaration types_sub |)
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==STRUCT) ) {
				int LA2_1 = input.LA(2);
				if ( (LA2_1==ID) ) {
					int LA2_3 = input.LA(3);
					if ( (LA2_3==LBRACE) && (synpred2_Mini())) {
						alt2=1;
					}
					else if ( (LA2_3==ID) ) {
						alt2=2;
					}

					else {
						if (state.backtracking>0) {state.failed=true; return retval;}
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 3, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					if (state.backtracking>0) {state.failed=true; return retval;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}
			else if ( (LA2_0==EOF||LA2_0==BOOL||LA2_0==FUN||LA2_0==INT) ) {
				alt2=2;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}

			switch (alt2) {
				case 1 :
					// C:\\eclipse-workspaces\\workspace1\\Compiler\\src\\edu\\calpoly\\mwerner\\compiler\\Mini.g:128:7: ( STRUCT ID LBRACE )=> type_declaration types_sub
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_type_declaration_in_types_sub1154);
					type_declaration3=type_declaration();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, type_declaration3.getTree());

					pushFollow(FOLLOW_types_sub_in_types_sub1156);
					types_sub4=types_sub();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, types_sub4.getTree());

					}
					break;
				case 2 :
					// C:\\eclipse-workspaces\\workspace1\\Compiler\\src\\edu\\calpoly\\mwerner\\compiler\\Mini.g:130:4: 
					{
					root_0 = (Object)adaptor.nil();


					}
					break;

			}
			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}

		   catch (RecognitionException re)
		   {
		      reportError(re);
		      recover(input, re);
		      _errors = true;
		   }

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "types_sub"


	public static class type_declaration_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "type_declaration"
	// C:\\eclipse-workspaces\\workspace1\\Compiler\\src\\edu\\calpoly\\mwerner\\compiler\\Mini.g:131:1: type_declaration : STRUCT ^ ID LBRACE ! nested_decl RBRACE ! SEMI !;
	public final MiniParser.type_declaration_return type_declaration() throws RecognitionException {
		MiniParser.type_declaration_return retval = new MiniParser.type_declaration_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token STRUCT5=null;
		Token ID6=null;
		Token LBRACE7=null;
		Token RBRACE9=null;
		Token SEMI10=null;
		ParserRuleReturnScope nested_decl8 =null;

		Object STRUCT5_tree=null;
		Object ID6_tree=null;
		Object LBRACE7_tree=null;
		Object RBRACE9_tree=null;
		Object SEMI10_tree=null;

		try {
			// C:\\eclipse-workspaces\\workspace1\\Compiler\\src\\edu\\calpoly\\mwerner\\compiler\\Mini.g:132:4: ( STRUCT ^ ID LBRACE ! nested_decl RBRACE ! SEMI !)
			// C:\\eclipse-workspaces\\workspace1\\Compiler\\src\\edu\\calpoly\\mwerner\\compiler\\Mini.g:132:7: STRUCT ^ ID LBRACE ! nested_decl RBRACE ! SEMI !
			{
			root_0 = (Object)adaptor.nil();


			STRUCT5=(Token)match(input,STRUCT,FOLLOW_STRUCT_in_type_declaration1176); if (state.failed) return retval;
			if ( state.backtracking==0 ) {
			STRUCT5_tree = (Object)adaptor.create(STRUCT5);
			root_0 = (Object)adaptor.becomeRoot(STRUCT5_tree, root_0);
			}

			ID6=(Token)match(input,ID,FOLLOW_ID_in_type_declaration1179); if (state.failed) return retval;
			if ( state.backtracking==0 ) {
			ID6_tree = (Object)adaptor.create(ID6);
			adaptor.addChild(root_0, ID6_tree);
			}

			LBRACE7=(Token)match(input,LBRACE,FOLLOW_LBRACE_in_type_declaration1181); if (state.failed) return retval;
			pushFollow(FOLLOW_nested_decl_in_type_declaration1184);
			nested_decl8=nested_decl();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, nested_decl8.getTree());

			RBRACE9=(Token)match(input,RBRACE,FOLLOW_RBRACE_in_type_declaration1186); if (state.failed) return retval;
			SEMI10=(Token)match(input,SEMI,FOLLOW_SEMI_in_type_declaration1189); if (state.failed) return retval;
			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}

		   catch (RecognitionException re)
		   {
		      reportError(re);
		      recover(input, re);
		      _errors = true;
		   }

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "type_declaration"


	public static class nested_decl_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "nested_decl"
	// C:\\eclipse-workspaces\\workspace1\\Compiler\\src\\edu\\calpoly\\mwerner\\compiler\\Mini.g:134:1: nested_decl : ( decl SEMI !)+ ;
	public final MiniParser.nested_decl_return nested_decl() throws RecognitionException {
		MiniParser.nested_decl_return retval = new MiniParser.nested_decl_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token SEMI12=null;
		ParserRuleReturnScope decl11 =null;

		Object SEMI12_tree=null;

		try {
			// C:\\eclipse-workspaces\\workspace1\\Compiler\\src\\edu\\calpoly\\mwerner\\compiler\\Mini.g:135:4: ( ( decl SEMI !)+ )
			// C:\\eclipse-workspaces\\workspace1\\Compiler\\src\\edu\\calpoly\\mwerner\\compiler\\Mini.g:135:7: ( decl SEMI !)+
			{
			root_0 = (Object)adaptor.nil();


			// C:\\eclipse-workspaces\\workspace1\\Compiler\\src\\edu\\calpoly\\mwerner\\compiler\\Mini.g:135:7: ( decl SEMI !)+
			int cnt3=0;
			loop3:
			while (true) {
				int alt3=2;
				int LA3_0 = input.LA(1);
				if ( (LA3_0==BOOL||LA3_0==INT||LA3_0==STRUCT) ) {
					alt3=1;
				}

				switch (alt3) {
				case 1 :
					// C:\\eclipse-workspaces\\workspace1\\Compiler\\src\\edu\\calpoly\\mwerner\\compiler\\Mini.g:135:8: decl SEMI !
					{
					pushFollow(FOLLOW_decl_in_nested_decl1206);
					decl11=decl();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, decl11.getTree());

					SEMI12=(Token)match(input,SEMI,FOLLOW_SEMI_in_nested_decl1208); if (state.failed) return retval;
					}
					break;

				default :
					if ( cnt3 >= 1 ) break loop3;
					if (state.backtracking>0) {state.failed=true; return retval;}
					EarlyExitException eee = new EarlyExitException(3, input);
					throw eee;
				}
				cnt3++;
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}

		   catch (RecognitionException re)
		   {
		      reportError(re);
		      recover(input, re);
		      _errors = true;
		   }

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "nested_decl"


	public static class decl_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "decl"
	// C:\\eclipse-workspaces\\workspace1\\Compiler\\src\\edu\\calpoly\\mwerner\\compiler\\Mini.g:137:1: decl : t= type i= ID -> ^( DECL ^( TYPE $t) $i) ;
	public final MiniParser.decl_return decl() throws RecognitionException {
		MiniParser.decl_return retval = new MiniParser.decl_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token i=null;
		ParserRuleReturnScope t =null;

		Object i_tree=null;
		RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
		RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");

		try {
			// C:\\eclipse-workspaces\\workspace1\\Compiler\\src\\edu\\calpoly\\mwerner\\compiler\\Mini.g:138:4: (t= type i= ID -> ^( DECL ^( TYPE $t) $i) )
			// C:\\eclipse-workspaces\\workspace1\\Compiler\\src\\edu\\calpoly\\mwerner\\compiler\\Mini.g:138:7: t= type i= ID
			{
			pushFollow(FOLLOW_type_in_decl1228);
			t=type();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) stream_type.add(t.getTree());
			i=(Token)match(input,ID,FOLLOW_ID_in_decl1232); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_ID.add(i);

			// AST REWRITE
			// elements: i, t
			// token labels: i
			// rule labels: retval, t
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if ( state.backtracking==0 ) {
			retval.tree = root_0;
			RewriteRuleTokenStream stream_i=new RewriteRuleTokenStream(adaptor,"token i",i);
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);
			RewriteRuleSubtreeStream stream_t=new RewriteRuleSubtreeStream(adaptor,"rule t",t!=null?t.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 139:7: -> ^( DECL ^( TYPE $t) $i)
			{
				// C:\\eclipse-workspaces\\workspace1\\Compiler\\src\\edu\\calpoly\\mwerner\\compiler\\Mini.g:139:10: ^( DECL ^( TYPE $t) $i)
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(DECL, "DECL"), root_1);
				// C:\\eclipse-workspaces\\workspace1\\Compiler\\src\\edu\\calpoly\\mwerner\\compiler\\Mini.g:139:17: ^( TYPE $t)
				{
				Object root_2 = (Object)adaptor.nil();
				root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(TYPE, "TYPE"), root_2);
				adaptor.addChild(root_2, stream_t.nextTree());
				adaptor.addChild(root_1, root_2);
				}

				adaptor.addChild(root_1, stream_i.nextNode());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}

		   catch (RecognitionException re)
		   {
		      reportError(re);
		      recover(input, re);
		      _errors = true;
		   }

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "decl"


	public static class type_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "type"
	// C:\\eclipse-workspaces\\workspace1\\Compiler\\src\\edu\\calpoly\\mwerner\\compiler\\Mini.g:141:1: type : ( INT | BOOL | STRUCT ^ ID );
	public final MiniParser.type_return type() throws RecognitionException {
		MiniParser.type_return retval = new MiniParser.type_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token INT13=null;
		Token BOOL14=null;
		Token STRUCT15=null;
		Token ID16=null;

		Object INT13_tree=null;
		Object BOOL14_tree=null;
		Object STRUCT15_tree=null;
		Object ID16_tree=null;
